--- a/productPing.html
+++ b/productPing.html
@@ -138,7 +138,7 @@
                         <li>
                             <a href="productSell.html">产品销量</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="productPing.html">产品评价</a>
                         </li>
                         <li>
@@ -292,7 +292,6 @@
                         <thead>
                         <tr>
                             <td>品牌</td>
-                            <td>产品总评价</td>
                             <td>产品外观评价</td>
                             <td>产品性能评价</td>
                             <td>产品价格评分</td>
