--- a/store.html
+++ b/store.html
@@ -127,7 +127,7 @@
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
                     <ul class="child-slide-menu" style="display: block;">
-                        <li>
+                        <li class="current">
                             <a href="store.html">门店数据</a>
                         </li>
                         <li>
