--- a/storeData.html
+++ b/storeData.html
@@ -158,7 +158,7 @@
                         <li>
                             <a href="store.html">门店数据</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="storeData.html">QRcode</a>
                         </li>
                         <li>
