--- a/storePing.html
+++ b/storePing.html
@@ -165,7 +165,7 @@
                             <a href="storeSell.html">门店销量</a>
                         </li>
 
-                        <li>
+                        <li class="current">
                             <a href="storePing.html">门店服务评价</a>
                         </li>
                         <li>
