--- a/storeSell.html
+++ b/storeSell.html
@@ -161,7 +161,7 @@
                         <li>
                             <a href="storeData.html">QRcode</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="storeSell.html">门店销量</a>
                         </li>
 
