--- a/vipData.html
+++ b/vipData.html
@@ -93,20 +93,20 @@
             <i class="iconfont icon-guanbi"></i>
         </div>
         <ul class="nav-slide-menu">
-            <li class="nav-list home-page active">
+            <li class="nav-list home-page">
                 <a href="index.html">
                     <i class="iconfont icon-home"></i>
                     首页
                 </a>
             </li>
-            <li class="nav-list">
+            <li class="nav-list active">
                 <a>
                     <i class="iconfont icon-shuju"></i>
                     会员
                     <i class="iconfont icon-fangxiangyou"></i>
                 </a>
                 <ul class="child-slide-menu" style="display: block;">
-                    <li>
+                    <li class="current">
                         <a href="vipData.html">会员数据</a>
                     </li>
                     <li>
