--- a/vipDrawing.html
+++ b/vipDrawing.html
@@ -11,7 +11,7 @@
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/moment.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/daterangepicker.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/echarts.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/echartsAll.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/china.js" type="text/javascript"></script>
     <script src="js/worldcloud.js"></script>
     <script>
@@ -98,13 +98,13 @@
                 <i class="iconfont icon-guanbi"></i>
             </div>
             <ul class="nav-slide-menu">
-                <li class="nav-list home-page active">
+                <li class="nav-list home-page">
                     <a href="index.html">
                         <i class="iconfont icon-home"></i>
                         首页
                     </a>
                 </li>
-                <li class="nav-list">
+                <li class="nav-list active">
                     <a>
                         <i class="iconfont icon-shuju"></i>
                         会员
@@ -114,7 +114,7 @@
                         <li>
                             <a href="vipData.html">会员数据</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="vipDrawing.html">数据画像</a>
                         </li>
                         <li>
