--- a/vipList.html
+++ b/vipList.html
@@ -74,13 +74,13 @@
                 <i class="iconfont icon-guanbi"></i>
             </div>
             <ul class="nav-slide-menu">
-                <li class="nav-list home-page active">
+                <li class="nav-list home-page">
                     <a href="index.html">
                         <i class="iconfont icon-home"></i>
                         首页
                     </a>
                 </li>
-                <li class="nav-list">
+                <li class="nav-list active">
                     <a>
                         <i class="iconfont icon-shuju"></i>
                         会员
@@ -96,7 +96,7 @@
                         <li>
                             <a href="vipBuy.html">消费能力</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="vipList.html">会员列表</a>
                         </li>
                     </ul>
