--- a/vipBuy.html
+++ b/vipBuy.html
@@ -94,13 +94,13 @@
                 <i class="iconfont icon-guanbi"></i>
             </div>
             <ul class="nav-slide-menu">
-                <li class="nav-list home-page active">
+                <li class="nav-list home-page">
                     <a href="index.html">
                         <i class="iconfont icon-home"></i>
                         首页
                     </a>
                 </li>
-                <li class="nav-list">
+                <li class="nav-list active">
                     <a>
                         <i class="iconfont icon-shuju"></i>
                         会员
@@ -113,7 +113,7 @@
                         <li>
                             <a href="vipDrawing.html">数据画像</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="vipBuy.html">消费能力</a>
                         </li>
                         <li>
@@ -236,7 +236,7 @@
                 <div class="col-md-12">
                     <!--查询条件-->
                     <div class="row search-content">
-                        <div class="col-md-4">
+                        <div class="col-md-5">
                             <div class="input-group date-select">
                                 <span class="input-group-addon">时间段</span>
                                 <input type="text" class="form-control" id="dateInput1"/>
