--- a/productList.html
+++ b/productList.html
@@ -216,7 +216,7 @@
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover">
                                 <thead>
-                                <tr style="text-align: center">
+                                <tr style="text-align: center;font-weight: 900;">
                                     <td>品牌</td>
                                     <td>车系</td>
                                     <td>车型</td>
@@ -264,7 +264,7 @@
 </div>
 <script>
     $(function () {
-//        $.fn.isSign();
+        $.fn.isSign();
         var tableData;//存储数据
         var filterData;//存储筛选条件
         var filter = {
