--- a/store.html
+++ b/store.html
@@ -195,7 +195,7 @@
 </div>
 <script>
     $(function () {
-        //$.fn.isSign();
+        $.fn.isSign();
         var quotaData;//指标数据
         var filter = {
             role:window.roleInfo.role,
