--- a/vipData.html
+++ b/vipData.html
@@ -277,7 +277,7 @@
             <div class="table-responsive lx-container">
                 <table class="table table-hover table-bordered" style="text-align:center;">
                     <thead>
-                    <tr>
+                    <tr style="text-align:center;font-weight: 900;">
                         <td>时间</td>
                         <td>新增会员</td>
                         <td>流失会员</td>
