--- a/vipDrawing.html
+++ b/vipDrawing.html
@@ -196,7 +196,7 @@
             </div>
             <!--查询条件-->
             <div class="row block">
-                <div class="col-md-6 block">
+                <div class="col-md-12 block">
                     <div class="block-title">
                         <p>性别分布</p>
                     </div>
@@ -204,14 +204,14 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 block">
-                    <div class="block-title">
-                        <p>会员活跃分布</p>
-                    </div>
-                    <div class="echarts-container" id="echarts2">
+                <!--<div class="col-md-6 block">-->
+                    <!--<div class="block-title">-->
+                        <!--<p>会员活跃分布</p>-->
+                    <!--</div>-->
+                    <!--<div class="echarts-container" id="echarts2">-->
 
-                    </div>
-                </div>
+                    <!--</div>-->
+                <!--</div>-->
                 <div class="col-md-6 block">
                     <div class="block-title">
                         <p>来源分布</p>
