--- a/vipList.html
+++ b/vipList.html
@@ -382,7 +382,7 @@
                             <div class="col-md-4 col-xs-4">
                                 <p style="font-weight: 900;"><span id="allVote">0</span>/<span id="allPrice">0.00</span>
                                 </p>
-                                <p>总订单数/订单总数</p>
+                                <p>总订单数/订单总额</p>
                             </div>
                             <div class="col-md-4 col-xs-4">
                                 <p style="font-weight: 900;" id="pingjun">0.00</p>
