--- a/product.html
+++ b/product.html
@@ -187,7 +187,7 @@
 </div>
 <script>
     $(function () {
-        //$.fn.isSign();
+        $.fn.isSign();
         var quotaData;//指标数据
         //获取数据
         var filter = {
