--- a/storeList.html
+++ b/storeList.html
@@ -128,7 +128,7 @@
                         产品
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
-                    <ul class="child-slide-menu" style="display: block;">
+                    <ul class="child-slide-menu">
                         <li>
                             <a href="product.html">产品数据</a>
                         </li>
@@ -152,7 +152,7 @@
                         门店
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
-                    <ul class="child-slide-menu">
+                    <ul class="child-slide-menu" style="display: block;">
                         <li>
                             <a href="store.html">门店数据</a>
                         </li>
@@ -203,14 +203,14 @@
             <!--产品数据-->
             <div class="row vip-wrapper" style="background: #fff;">
                 <div class="result-title">
-                    <p style="line-height: 40px;color: #fff;padding-left: 20px;">产品评价列表</p>
+                    <p style="line-height: 40px;color: #fff;padding-left: 20px;">服务评价列表</p>
                 </div>
                 <div class="col-md-12 col-sm-12">
                     <div class="vip-container">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover">
                                 <thead>
-                                <tr style="text-align: center">
+                                <tr style="text-align: center;font-weight: 900;">
                                     <td>门店名称</td>
                                     <td>门店代码</td>
                                     <td>经销商代码</td>
@@ -267,7 +267,7 @@
             roleCode: window.roleInfo.roleCode,
             beginDate:getDateArea(1),
             endDate: getDateArea(0),
-            areaList: "",//区域列表
+            areaList: window.roleInfo.roleCode,//区域列表
             areaType:"",//类型1,sbu,2经销商,3门店
             pageNo: 1,
             pageSize: "30"
@@ -280,10 +280,14 @@
                 filter.areaType = 1;
             }else if(filter.role == "dealer"){
                 filter.areaType = 2;
+                $("#search-btn1").remove();
+                $("#search-btn2").addClass("btn-primary");
             }else if(filter.role == "storeManager"){
                 filter.areaType = 3;
+                $("#search-btn1").remove();
+                $("#search-btn2").remove();
+                $("#search-btn3").remove();
             }
-            console.log(filter.roleCode)
             if(filter.roleCode == "" || filter.roleCode== "%22%22"){
                 filter.areaList = "GCK,GCC,GCT";
             }
