--- a/storePing.html
+++ b/storePing.html
@@ -220,7 +220,7 @@
             <!--数据表-->
             <div class="row data-charts block">
                 <div class="block-title">
-                    <p>会员数据</p>
+                    <p>门店数据</p>
                 </div>
                 <div class="col-md-12">
                     <!--查询条件-->
